YATC 0.6.1:
  yatc.py:
    1. Sound forwarding option added.

  post-install.sh:
    1. "set -u -e" added. Few sed command lines fixed.