@@ -1,3 +1,12 @@
+YATC 0.7.0:
+  yatc.py:
+    1. CDROM redirection added.
+
+  post-install.sh:
+    1. usbmount replaced by autofs.
+    2. YATC_BRANCH variable added.
+
+
 YATC 0.6.1:
   yatc.py:
     1. Sound forwarding option added.
